# ivado-rl-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
notebooks/: lab1_reinforce_fourrooms.ipynb  lab1_reinforce_fourrooms_student.ipynb  lab2_lab3_nano_r1.ipynb  lab2_lab3_nano_r1_student.ipynb
rl_basics/: __init__.py  dash_app.py  env.py  grad_variance.py  models.py  render.py  runs.py  student.py  train.py  utils.py  viz.py
scripts/: build_lab2_3_student_nb.py  build_nb.py
tests/: __init__.py  test_dash.py  test_e2e.py  test_env.py  test_models.py  test_notebook_build.py  test_reset.py  test_rollout.py  test_runs.py  test_student.py  test_utils.py  test_viz.py
tests/fixtures/: build_mini_run.py
tests/fixtures/mini_run/value_b4_g1.0_h8_bbbbbb/: config.json
tests/fixtures/mini_run/value_b4_g1.0_h8_bbbbbb/seed_0/: metrics.jsonl
tests/fixtures/mini_run/value_b4_g1.0_h8_bbbbbb/seed_1/: metrics.jsonl
tests/fixtures/mini_run/value_b4_g1.0_h8_bbbbbb/seed_2/: metrics.jsonl
tests/fixtures/mini_run/vanilla_b4_g1.0_h8_aaaaaa/: config.json
tests/fixtures/mini_run/vanilla_b4_g1.0_h8_aaaaaa/seed_0/: metrics.jsonl
tests/fixtures/mini_run/vanilla_b4_g1.0_h8_aaaaaa/seed_1/: metrics.jsonl
tests/fixtures/mini_run/vanilla_b4_g1.0_h8_aaaaaa/seed_2/: metrics.jsonl
tests/stress/: __init__.py  test_env_stress.py  test_grad_var_stress.py  test_rollout_stress.py  test_runs_stress.py  test_student_stress.py
